fixed layout on mobile vertical

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@
   overflow: hidden;
 }
 .card-slider {
-  left: 40%;
+  left: 100%;
   position: relative;
   z-index: 100;
   max-width: 500px;
@@ -371,6 +371,9 @@ div.image-card.full-screen .info-block h1 {
 }
 
 @media screen and (min-width: 996px) {
+  .card-slider {
+    left: 40%;
+  }
   .bottom-wrapper {
     width: 60vw !important;
     max-width: 60vw !important;
